--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KR">
   <head>
     <meta charset="utf-8" />
+    <meta name="keywords" content="Whomember, 후멤버" />
+    <meta
+      name="description"
+      content="직장내 직원찾는 서비스, Who member입니다. 다양한 사무위치에 맞게 빠르고 쉽게 찾는 직원 정보를 찾아 보세요"
+    />
+    <meta name="author" content="Sonseon10" />
+    <meta name="robots" content="ALL" />
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./meta-image.jpg" />
+    <meta property="og:title" content="후멤버(Whomember)" />
+    <meta
+      property="og:description"
+      content="직장내 직원찾는 서비스, Who member입니다."
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="/" />
+    <meta name="twitter:title" content="후멤버(Whomember)" />
+    <meta
+      name="twitter:description"
+      content="직장내 직원찾는 서비스, Who member입니다."
+    />
+    <meta name="twitter:image" content="./meta-image.jpg" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
