--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Whomember, 후멤버" />
     <meta
       name="description"
-      content="직장내 직원찾는 서비스, Who member입니다. 다양한 사무위치에 맞게 빠르고 쉽게 찾는 직원 정보를 찾아 보세요"
+      content="직장내 업무도우미, Who member입니다. 다양한 사무위치에 맞게 빠르고 쉽게 찾는 직원 정보를 찾아 보세요"
     />
     <meta name="author" content="Sonseon10" />
     <meta name="robots" content="ALL" />
@@ -15,28 +15,33 @@
     <meta property="og:title" content="후멤버(Whomember)" />
     <meta
       property="og:description"
-      content="직장내 직원찾는 서비스, Who member입니다."
+      content="직장내 업무도우미, Who member입니다."
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:title" content="후멤버(Whomember)" />
     <meta
       name="twitter:description"
-      content="직장내 직원찾는 서비스, Who member입니다."
+      content="직장내 업무도우미, Who member입니다."
     />
     <meta name="twitter:image" content="./meta-image.jpg" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#162234" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="theme-color" content="#009EB4" />
+
     <title>WhoMember</title>
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
@@ -47,5 +52,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./public.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js').then((reg) => {
+          console.log('hello pwa')
+        })
+      }
+    </script>
   </body>
 </html>
