프로젝트 구조개선

--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,8 @@
 <html lang="ko-KR">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="Whomember, 후멤버" />
-    <meta
-      name="description"
-      content="직장내 업무도우미, Who member입니다. 다양한 사무위치에 맞게 빠르고 쉽게 찾는 직원 정보를 찾아 보세요"
-    />
-    <meta name="author" content="Sonseon10" />
-    <meta name="robots" content="ALL" />
-    <meta property="og:url" content="/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="./meta-image.jpg" />
-    <meta property="og:title" content="후멤버(Whomember)" />
-    <meta
-      property="og:description"
-      content="직장내 업무도우미, Who member입니다."
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="/" />
-    <meta name="twitter:title" content="후멤버(Whomember)" />
-    <meta
-      name="twitter:description"
-      content="직장내 업무도우미, Who member입니다."
-    />
-    <meta name="twitter:image" content="./meta-image.jpg" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="upgrade-insecure-requests"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#162234" />
-    <meta name="theme-color" content="#009EB4" />
-
-    <title>WhoMember</title>
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>내일의집 | 어드민</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
@@ -52,12 +14,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./public.js"></script>
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('service-worker.js').then((reg) => {
-          console.log('hello pwa')
-        })
-      }
-    </script>
   </body>
 </html>
