--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="./public.js"></script>
+    <script src="/public.js"></script>
   </body>
 </html>
